Istio-IngresGateway-validator-service_charge/deployment-service-Sevice_Charge_MS.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-charge
spec:
  selector:
    matchLabels:
      app: service-charge 
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: service-charge
    spec:
      containers:
      - name: service-charge
        image: bhartim15/service-charge
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-charge
  labels:
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: service-charge
