Istio-IngresGateway-validator-service_charge/ingress-resource.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-validator
spec:
  rules:
  - http:
      paths:
      - path: /Hello
        backend:
          serviceName: validator
          servicePort: 8080
      - path: /users
        backend:
          serviceName: validator
          servicePort: 8080
      - path: /validate
        backend:
          serviceName: validator
          servicePort: 8080
      - path: /servicecharge
        backend:
          serviceName: service-charge
          servicePort: 8080
